[project]
name = "goapauto"
version = "0.1.1"
description = "A flexible Goal-Oriented Action Planning (GOAP) system for game AI and planning problems, featuring A* search, efficient state management, and modular design."
readme = "README.md"
authors = [
    { name = "IAmNo1Special", email = "ivmno1special@gmail.com" }
]
requires-python = "==3.13.*"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]